k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: peopleflow-prod
  labels:
    app: peopleflow
    environment: prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: peopleflow-staging
  labels:
    app: peopleflow
    environment: staging
